--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
     "postcss": "^8",
     "prettier": "^3.2.4",
     "tailwindcss": "^3.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run lint && npm run format"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx}": [
+      "npm run lint",
+      "npm run format"
+    ]
   }
 }
