--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.6",
+    "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.2.4",
