--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": ["eslint:recommended", "next", "next/core-web-vitals", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": 0
+    "prettier/prettier": 0,
+    "react/no-unescaped-entities": "off"
     // "prettier/prettier": "error"
   }
 }
